--- a/index.html
+++ b/index.html
@@ -51,10 +51,10 @@
             </div>
 
             <div class="box" id="attack-type">
-                <div><input type="checkbox" name="melee" id="mel"> 
+                <div><input type="checkbox" name="melee" id="melee"> 
                     <label for="melee">Melee</label></div> 
       
-                   <div> <input type="checkbox" name="ranged" id="ran"> 
+                   <div> <input type="checkbox" name="ranged" id="ranged"> 
                     <label for="ranged">Ranged</label> </div>
       
             </div>
